OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/Onboarding_Application_Stage__c.object-meta.xml
<CustomObject>
    <description>Represents one logical step/stage in a process (e.g., “Select Vendor”, “Choose Program”).</description>
    <label>Onboarding Application Stage</label>
    <nameField>
        <label>Onboarding Application Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Application Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>