OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Filter stages per process version</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>