OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Allow_Skip__c.field-meta.xml
<CustomField>
    <fullName>Allow_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows this stage to be skipped when conditions are met (or by admin override).</description>
    <label>Allow Skip</label>
    <type>Checkbox</type>
</CustomField>