OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Conditional_Advanced_Logic__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Advanced_Logic__c</fullName>
    <description>Advanced conditional expression that controls whether this stage is shown or required.</description>
    <label>Conditional Advanced Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>