OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>UI display name override.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>