OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional pointer for branching to the next stage when this one completes.</description>
    <label>Next Stage</label>
    <referenceTo>Onboarding_Application_Stage__c</referenceTo>
    <relationshipLabel>Onboarding Application Stages</relationshipLabel>
    <relationshipName>Onboarding_Application_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>