OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Onboarding_Application_Process__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application_Process__c</fullName>
    <description>Parent onboarding process that this stage belongs to.</description>
    <label>Onboarding Application Process</label>
    <referenceTo>Onboarding_Application_Process__c</referenceTo>
    <relationshipLabel>Onboarding Application Stages</relationshipLabel>
    <relationshipName>Onboarding_Application_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>