OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Onboarding_Component_Library__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Component_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Drives which LWC/Flow to render</description>
    <label>Component</label>
    <referenceTo>Onboarding_Component_Library__c</referenceTo>
    <relationshipLabel>Onboarding Application Stages</relationshipLabel>
    <relationshipName>Onboarding_Application_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>