OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows user to skip current step if unchecked</description>
    <inlineHelpText>Leave checked unless this current step is optional</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>