OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Application_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Active__c</columns>
    <columns>Label__c</columns>
    <columns>Next_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>